# librespotd

./: Cargo.toml
src/: main.rs  player_event_handler.rs
