[package]
name = "librespotd"
version = "0.1.0"
authors = ["Sasha Hilton <sashahilton00@gmail.com>"]
edition = "2018"

[[bin]]
name = "librespotd"
path = "src/main.rs"
doc = false

[dependencies]
env_logger =  { version = "0.7.1", default-features = false, features = ["termcolor","humantime","atty"] } 
futures = "0.1"
getopts = "0.2.21"
hex = "0.4.2"
log = "0.4.8"
rpassword = "4.0.5"
sha-1 = "0.8.2"
tokio-core = "0.1.17"
tokio-io = "0.1.13"
tokio-process = "0.2.5"
tokio-signal = "0.2.9"
url = "1.7.2"

librespot = { git = "https://github.com/librespot-org/librespot", branch ="dev" }
